<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/messageBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/messageBodyDefault" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/messageBody"
        android:layout_below="@+id/messageBody"
        android:layout_marginTop="19dp"
        android:text="@string/userNameDefault"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userName"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:text="@string/timestampDefault" />

    <ImageButton
        android:id="@+id/deleteMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/timestamp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</RelativeLayout>
